--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,25 @@
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Audible</a>
+<head>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;500;600;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet"
+  />
+</head>
 
-    <div class="" id="mainNavBar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'register'">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'login'">Login</a>
-        </li>
-      </ul>
+<header>
+  <nav class="nav-header">
+    <div class="nav-content">
+      <a class="nav-logo" href="/">Audible</a>
+
+      <div class="nav-bar-mobile-logo-container" id="mainNavBar">
+        <ul class="nav-menu">
+          <li class="nav-menu-item">
+            <a class="nav-link" [routerLink]="'register'">Register</a>
+          </li>
+          <li class="nav-menu-item">
+            <a class="nav-link" [routerLink]="'login'">Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 </header>
