--- a/src/app/audio-books/audio-books.component.css
+++ b/src/app/audio-books/audio-books.component.css
@@ -1,3 +1,11 @@
+.audio-sections {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 90%;
+  max-width: 1110px;
+}
+
 .audio-books-container {
   display: flex;
   flex-direction: column;
@@ -5,19 +13,110 @@
   align-items: center;
 }
 
+.audios-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+}
+
 @media screen and (min-width: 768px) {
-  .audio-books-container {
+  .audios-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
+    gap: 30px;
   }
 }
 
-.similar-product-item {
+.link-item {
+  text-decoration: none;
+  margin-bottom: 48px;
+  width: 350px;
+  flex-grow: 0;
+  flex-shrink: 1;
+  margin-right: 20px;
+  color: black;
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .link-item {
+    width: 300px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .link-item {
+    width: 330px;
+  }
+}
+
+.audio-item {
   display: flex;
   flex-direction: column;
-  list-style-type: none;
+  margin-bottom: 48px;
+}
+
+.thumbnail {
+  width: 100%;
+  max-height: 350px;
+  border-radius: 6px;
+}
+
+.title {
+  color: #171f46;
+  font-family: "Roboto";
+  font-size: 21px;
+  font-weight: 500;
+  margin-top: 20px;
+  margin-bottom: 8px;
+}
+
+.author {
+  color: #594d6d;
+  font-family: "Roboto";
+  font-size: 18px;
+  margin-bottom: 6px;
+}
+
+.order-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 2px;
+}
+
+.price {
+  color: #171f46;
+  font-family: "Roboto";
+  font-size: 17px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.rating-container {
+  display: flex;
+  align-items: center;
+  /* background-color: #3b82f6; */
+  background-color: #fc4d0f;
+  border-radius: 6px;
+  padding: 6px 16px;
+}
+
+.rating {
+  color: #ffffff;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 500;
+  margin-right: 4px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.star {
+  height: 20px;
+  width: 20px;
+  margin-bottom: 3px;
 }
 
 @media screen and (min-width: 768px) {
