added cart component

--- a/src/app/audio-books/audio-books.component.html
+++ b/src/app/audio-books/audio-books.component.html
@@ -80,7 +80,7 @@
           </div>
           <button
             type="button"
-            class="button add-to-cart-btn"
+            class="add-to-cart-btn"
             (click)="addToCart(audio)"
           >
             ADD TO CART
