--- a/src/app/audio-book-details/audio-book-details.component.html
+++ b/src/app/audio-book-details/audio-book-details.component.html
@@ -38,7 +38,7 @@
           <!-- <BsPlusSquare class="quantity-controller-icon" /> -->
         </button>
       </div>
-      <button type="button" class="button add-to-cart-btn">ADD TO CART</button>
+      <button type="button" class="add-to-cart-btn">ADD TO CART</button>
     </div>
   </div>
 </div>
