--- a/src/app/audio-books/audio-books.component.html
+++ b/src/app/audio-books/audio-books.component.html
@@ -11,47 +11,90 @@
 </div>  -->
 
 <div class="audio-sections">
-  <div class="input-search-bar">
-    <input
-      type="search"
-      value=""
-      class="input-search"
-      [(ngModel)]="searchValue"
-      (keyup.enter)="search()"
-      placeholder="Search audio books..."
-    />
-    <button (click)="search()">
+  <div class="search-sort-by-container">
+    <div class="search-input-container">
+      <input
+        type="search"
+        value=""
+        class="search-input"
+        [(ngModel)]="searchValue"
+        (keyup.enter)="search()"
+        placeholder="Search audio books..."
+      />
       <svg
+        stroke="currentColor"
+        fill="currentColor"
+        stroke-width="0"
+        viewBox="0 0 16 16"
         class="search-icon"
-        width="18"
-        height="18"
-        viewBox="0 0 18 18"
-        fill="#464646"
+        height="1em"
+        width="1em"
+        xmlns="http://www.w3.org/2000/svg"
+        (click)="search()"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
+          clip-rule="evenodd"
+        ></path>
+        <path
+          fill-rule="evenodd"
+          d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
+          clip-rule="evenodd"
+        ></path>
+      </svg>
+      <!-- <button (click)="search()">
+        <svg
+          class="search-icon"
+          width="18"
+          height="18"
+          viewBox="0 0 18 18"
+          fill="#464646"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M12.8645 11.3208H12.0515L11.7633 11.0429C12.7719 9.86964 13.3791 8.34648 13.3791 6.68954C13.3791 2.99485 10.3842 0 6.68954 0C2.99485 0 0 2.99485 0 6.68954C0 10.3842 2.99485 13.3791 6.68954 13.3791C8.34648 13.3791 9.86964 12.7719 11.0429 11.7633L11.3208 12.0515V12.8645L16.4666 18L18 16.4666L12.8645 11.3208ZM6.68954 11.3208C4.12693 11.3208 2.05832 9.25214 2.05832 6.68954C2.05832 4.12693 4.12693 2.05832 6.68954 2.05832C9.25214 2.05832 11.3208 4.12693 11.3208 6.68954C11.3208 9.25214 9.25214 11.3208 6.68954 11.3208Z"
+          />
+        </svg>
+      </button> -->
+    </div>
+    <!-- <div>
+    <button>Add to cart</button>
+    <p *ngIf="cartItems.length > 0">{{ cartItems.length }}</p>
+  </div> -->
+
+    <div class="sort-by-container">
+      <svg
+        stroke="currentColor"
+        fill="currentColor"
+        stroke-width="0"
+        viewBox="0 0 16 16"
+        class="sort-by-icon"
+        height="1em"
+        width="1em"
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          d="M12.8645 11.3208H12.0515L11.7633 11.0429C12.7719 9.86964 13.3791 8.34648 13.3791 6.68954C13.3791 2.99485 10.3842 0 6.68954 0C2.99485 0 0 2.99485 0 6.68954C0 10.3842 2.99485 13.3791 6.68954 13.3791C8.34648 13.3791 9.86964 12.7719 11.0429 11.7633L11.3208 12.0515V12.8645L16.4666 18L18 16.4666L12.8645 11.3208ZM6.68954 11.3208C4.12693 11.3208 2.05832 9.25214 2.05832 6.68954C2.05832 4.12693 4.12693 2.05832 6.68954 2.05832C9.25214 2.05832 11.3208 4.12693 11.3208 6.68954C11.3208 9.25214 9.25214 11.3208 6.68954 11.3208Z"
-        />
+          fill-rule="evenodd"
+          d="M14 10.5a.5.5 0 00-.5-.5h-3a.5.5 0 000 1h3a.5.5 0 00.5-.5zm0-3a.5.5 0 00-.5-.5h-7a.5.5 0 000 1h7a.5.5 0 00.5-.5zm0-3a.5.5 0 00-.5-.5h-11a.5.5 0 000 1h11a.5.5 0 00.5-.5z"
+          clip-rule="evenodd"
+        ></path>
       </svg>
-    </button>
+      <!-- <p class="sort-by">Sort by</p> -->
+      <select
+        [(ngModel)]="selectedSortOption"
+        (ngModelChange)="sortItems()"
+        class="sort-by-select"
+      >
+        <option value="" disabled class="select-option">Sort By</option>
+        <option value="author" class="select-option">Author</option>
+        <option value="price" class="select-option">Price</option>
+        <option value="rating" class="select-option">Rating</option>
+        <option value="title" class="select-option">Title</option>
+        <option value="releaseDate" class="select-option">Release Date</option>
+      </select>
+    </div>
   </div>
-  <div>
-    <button>Add to cart</button>
-    <p *ngIf="cartItems.length > 0">{{ cartItems.length }}</p>
-  </div>
-
-  <select
-    [(ngModel)]="selectedSortOption"
-    (ngModelChange)="sortItems()"
-    class="dropdown-toggle"
-  >
-    <option value="" disabled>Sort By</option>
-    <option value="author">Author</option>
-    <option value="price">Price</option>
-    <option value="rating">Rating</option>
-    <option value="title">Title</option>
-    <option value="releaseDate">Release Date</option>
-  </select>
 
   <div *ngIf="searchResults.length == 0; else displayAudioResults">
     <ul class="audios-list">
