--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,31 @@
-<section class="explore-section bg">
+<!-- <section class="explore-section bg">
   <button (click)="explore()" class="explore-button">Explore</button>
-</section>
+</section> -->
+
+<div class="home-container">
+  <div class="home-content">
+    <h1 class="home-heading">
+      Listen to audiobooks, podcasts, Audible Originals
+    </h1>
+    <img
+      src="https://hmh-ea97.kxcdn.com/host_images/are-headphones-and-earbuds-bad-for-your-health-GettyImages-1176643996%20(1).jpg"
+      alt="clothes that get you noticed"
+      class="home-mobile-img"
+    />
+    <p class="home-description">
+      Audible is part of the daily air and it does not quite help that it
+      changes all the time. Aduio books have always been a marker of the era and
+      we are in a revolution. Your listening skills makes you been seen and
+      heard that way you are. So, celebrate the seasons new and exciting audios
+      in your own way.
+    </p>
+    <a href="/audioBooks"
+      ><button type="button" class="explore-button">Explore</button></a
+    >
+  </div>
+  <img
+    src="https://hmh-ea97.kxcdn.com/host_images/are-headphones-and-earbuds-bad-for-your-health-GettyImages-1176643996%20(1).jpg"
+    alt="clothes that get you noticed"
+    class="home-desktop-img"
+  />
+</div>
