changed alt texts

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
     </h1>
     <img
       src="https://hmh-ea97.kxcdn.com/host_images/are-headphones-and-earbuds-bad-for-your-health-GettyImages-1176643996%20(1).jpg"
-      alt="clothes that get you noticed"
+      alt="audio books"
       class="home-mobile-img"
     />
     <p class="home-description">
@@ -25,7 +25,7 @@
   </div>
   <img
     src="https://hmh-ea97.kxcdn.com/host_images/are-headphones-and-earbuds-bad-for-your-health-GettyImages-1176643996%20(1).jpg"
-    alt="clothes that get you noticed"
+    alt="audio books"
     class="home-desktop-img"
   />
 </div>
